# www-project-agent-memory-guard

./: CLONE.md  README.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: adapter_request.yml  bug_report.yml  config.yml  docs.yml  feature_request.yml
.github/workflows/: memory-guard-scan.yml
benchmarks/: security_benchmark.py
examples/: integrations.md  opentelemetry_hook.py
examples/notebooks/: README.md  attack_simulation.ipynb  forensics_and_rollback.ipynb  langchain_integration.ipynb  quickstart.ipynb
integrations/autogen-agent-memory-guard/: README.md
scanner/: __init__.py  rules.py  sarif_output.py  scan.py
src/agent_memory_guard/: __init__.py  events.py  guard.py  metrics.py  streaming.py
src/agent_memory_guard/detectors/: cross_task.py  self_reinforcement.py
src/agent_memory_guard/integrations/: crewai.py  langchain.py  llamaindex.py
src/agent_memory_guard/policies/: policy.py
tests/: test_classification.py  test_policy_tiered.py  test_self_reinforcement.py
